# oFEC-HUAWEI

./: .gitignore  CMakeLists.txt
apps/: ofec_single.cpp  ofec_sweep.cpp
include/newcode/: awgn.hpp  bch_255_239.hpp  ber.hpp  bitgen.hpp  chase256.hpp  decoder_core.hpp  info_extract.hpp  llr_known_prefix.hpp  llr_qpack.hpp  llr_to_bit.hpp  llr_utils.hpp  matrix.hpp  newcode.hpp  ofec_decoder.hpp  ofec_decoder_hard.hpp  ofec_encoder.hpp  ofec_llr_matrix.hpp  params.hpp  pipeline_runner.hpp  qam.hpp  qam_llr.hpp  qfloat.hpp
src/: awgn.cpp  bch_255_239.cpp  ber.cpp  bitgen.cpp  chase256.cpp  decoder_core.cpp  info_extract.cpp  llr_known_prefix.cpp  llr_qpack.cpp  llr_to_bit.cpp  main.cpp  newcode.cpp  ofec_decoder.cpp  ofec_decoder_hard.cpp  ofec_encoder.cpp  ofec_llr_matrix.cpp  pipeline_runner.cpp  qam.cpp  qam_llr.cpp  qfloat.cpp
tests/: llr_reshape_demo.cpp  llr_to_bit_cpptest.cpp  test_awgn.cpp  test_bch.cpp  test_info_extract.cpp  test_matrix.cpp  test_ofec_decoder.cpp  test_qam.cpp  test_qam_llr.cpp
